Fixes for index page on mobile devices

--- a/index.css
+++ b/index.css
@@ -19,25 +19,60 @@ body{
 	overflow-x: hidden;
 }
 
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.float-right {
+	float: right;
+}
+
+@media screen and (max-width: 600px) {
+	span.float-right {
+		margin-left: 15px;
+		width: 40%;
+	}
+	span.float-right img {
+		width: 100%;
+		height: 100%;
+	}
+}
+
 .intro {
-    text-align:center; 
+	text-align:center; 
 	margin: auto;
 	width: 600px;
 	height: 378px;
 	border: 0px solid #000000;
 	padding: 10px;
 }
+@media screen and (max-width: 600px) {
+	.intro {
+		width: 95%;
+		height: auto;
+	}
+}
 
 .linkList {
-    text-align:center;   
-    border:0px solid #666;	
+	text-align:center;
+	border:0px solid #666;
 	text-shadow: 3px 3px #000000;
-	font-size: 36px
+	font-size: 36px;
+	/* inline-block inline-table table -webkit-inline-box -webkit-box */
+}
+
+@media screen and (max-width: 500px) {
+	.linkList {
+		display: table;
+		width: 100%;
+	}
 }
 
 .linkList2 {
-    text-align:center;   
-    border:0px solid #666;	
+	text-align:center;   
+	border:0px solid #666;	
 	text-shadow: 2px 2px #000000;
 	font-size: 28px
 }
@@ -49,14 +84,20 @@ body{
     border:0px solid #CCC;	
 }
 
+.logo {
+	border-width: 0px;
+	width: 320px;
+	height: 100px;
+}
+
 a {
-    color: #FFFFFF;
+	color: #FFFFFF;
 	text-decoration: none;
 }
 
 a:hover {
-    color: #DDDDDD;
-    text-decoration: none;
+	color: #DDDDDD;
+	text-decoration: none;
 }
 
 h3 {
@@ -70,4 +111,9 @@ hr {
 	height: 8px;
 	background-color:#000000;
 	border: 0 none;
+}
+
+img.penguin {
+	width: 212px;
+	height: 377px;
 }
